force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Fatigue_Suppression_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Fatigue_Suppression_Enabled__c</fullName>
    <description>Enables fatigue suppression logic for this rule.</description>
    <label>Fatigue Suppression Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>