force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Fatigue_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Fatigue_Window_Days__c</fullName>
    <description>Number of days in fatigue window.</description>
    <label>Fatigue Window (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>