force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <description>Channel/type for follow-up (SMS, Email, In-App, Phone).</description>
    <label>Follow Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-App</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
        <valueSetName/>
    </valueSet>
</CustomField>