force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Initial_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delay_Days__c</fullName>
    <description>Days to wait before first follow-up.</description>
    <label>Initial Delay (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>