force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Max_Attempts_Per_Window__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts_Per_Window__c</fullName>
    <description>Maximum attempts allowed in fatigue window.</description>
    <label>Max Attempts Per Window</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>