force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Messaging_Channel__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel__c</fullName>
    <description>MessagingChannel Id/identifier to use for sends.</description>
    <label>Messaging Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>