force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Trigger_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Condition__c</fullName>
    <description>Condition expression for when to fire the follow-up (e.g., status/time checks).</description>
    <label>Trigger Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>