force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <label>Twilio Account SID</label>
    <type>Text</type>
    <length>255</length>
    <description>Twilio Account SID for this rule (overrides Twilio_Configuration__mdt default). Required for Twilio API calls.</description>
</CustomField>