force-app/main/default/objects/Follow_Up_Rule__mdt/fields/Twilio_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Named_Credential__c</fullName>
    <label>Twilio Named Credential</label>
    <type>Text</type>
    <length>80</length>
    <description>Named Credential name for Twilio API (overrides Twilio_Configuration__mdt default). Defaults to 'Twilio_API' if not specified.</description>
</CustomField>